--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ p {
 
 section {
   padding: 50px;
-  background-color: #c2d2d8;
+  background-color: #e4e4e4;
 }
 
 
@@ -131,7 +131,7 @@ main img {
 /* -------  Navigation ------- */
 
 header {
-  background-color: #ffffff;
+  background-color: #F6F6F6;
   padding: 20px 20px 0 20px;
   height: 60px;
   text-align: center;
@@ -212,6 +212,8 @@ footer p {
   right: 1rem;
   padding: 4px;
   margin-top: 8px;
+  height: 34px;
+  width: 34px;
   border: white solid 1px;
   background: white;
   cursor: pointer;
@@ -307,7 +309,7 @@ footer p {
 /* Quote Heading */
 
 .quote_heading {
-  background-color: #63808e;
+  background-color: #345d87;
   padding: 10px;
 }
 
@@ -348,28 +350,34 @@ footer p {
 
 /* Add some basic styling */
 .accordion-button {
-  background-color: #4a8aa5;
-  color: white;
+  background-color: rgba(253, 253, 253, 0);
+  color: #63808e;
+  font-size: 20px;
   padding: 10px 20px;
-  width: 100%;
+  width: 90%;
   border: none;
   cursor: pointer;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 2px;
-  display: flex;
   align-items: center;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
   display: flex;
   justify-content: space-between;
+}
+
+hr {
+  border: 0;
+  border-top: 1px solid #878787; /* Adjust the color and thickness as needed */
+  margin: 20px 0; /* Optional: Adjust the margin as needed */
 }
 
 .accordion-button .icon {
   margin-left: 10px;
 }
 
-.accordion-button:hover {
+/* .accordion-button:hover {
   background-color: #3A6A86;
-}
+} */
 
 /* Extra content animation */
 .accordion-content {
@@ -425,11 +433,17 @@ section a {
   font-size: 20px;
 }
 
+.experience-heading p {
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
 .experience-item {
   text-align: left;
   margin-top: 15px;
   padding: 15px 15px 15px 15px;
-  background-color: rgba(255, 255, 255, 0.2); /* 50% transparent white */
+  background-color: rgba(255, 255, 255, 0.3); /* 50% transparent white */
   border-radius: 2px;
 }
 
@@ -457,6 +471,10 @@ section a {
 .experience-item .icon {
   font-size: 25px;
   font-weight: 500;
+}
+
+.experience-item p {
+  margin-top: 15px;
 }
 
 /* Links */
@@ -509,6 +527,16 @@ section a {
 
 
 
+
+
+
+
+
+
+
+
+
+
 /* -------  Media Query ------- */
 
 @media all and (min-width: 768px) {
@@ -522,150 +550,151 @@ header {
 
 .logo {
   font-size: 40px;
+  margin-left: 10px;
 }
 
-
-
-
-/* ------- Welcome Section ------- */
-
-#welcome {
-  position: relative;
-  text-align: center;
+.hamburger {
+  display: none;
 }
 
-#welcome-img {
-  width: 100%;
-  overflow: hidden;
-}
-
-#welcome-img img {
-  width: 100%;
-  display: block;
-}
-
-.image-container {
-  text-align: center; /* Center the image horizontally */
-}
-
-.centered-image {
-  width: auto;
+.menu {
+  position: static;
+  transform: none;
+  background: none;
+  padding-top: 0;
   height: auto;
-  max-width: 300px; /* Ensures the image doesn't exceed the specified width */
-  display: inline-block; /* Ensures there are no extra spaces at the bottom */
-}
-
-#welcome-message {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  transform: translateY(-50%);
-}
-
-#welcome-message h1 {
-  color: white;
-  font-size: 2em;
-  /* Additional styling as needed */
-}
-
-#welcome-message h2 {
-  color: white;
-  font-size: 2em;
-  /* Additional styling as needed */
-}
-
-#join {
   display: flex;
+  justify-content: right;
   align-items: center;
-  padding: 30px;
-  gap: 20px;
 }
 
-#join-img {
-  flex: 2;
+.menu li {
+  margin: 0 15px;
 }
 
-#join-form {
-  flex: 1;
+.menu li a {
+  font-size: 18px;
 }
+
+.menuItem {
+  display: inline;
+  padding-right: 10px;
+}
+
+.closeIcon {
+  display: none;
+}
+
+
+/* About */
 
 #about {
-  padding: 30px;
-}
-
-#about h2 {
-  padding-bottom: 10px;
-}
-
-#about img {
-  margin: 0;
+  display: flex;
+  justify-content: center;
 }
 
 #about_flex {
   display: flex;
-  gap: 20px;
+  padding: 50px 50px 50px 50px; /* existing padding */
+  gap: 20px; /* margin between image and text */
+  max-width: 1000px;
 }
 
 .about_item {
-  flex: 1;
+  margin: 5px;
 }
 
-#about_text {
-  margin-top: 20px;
-  flex: 2;
+.about_item img {
+  max-width: 100%;
+  height: auto; /* maintain aspect ratio */
 }
 
-#download {
+#about_flex .about_item:first-child {
+  flex: 1; /* 1/3 of the width */
+}
+
+#about_flex .about_item:last-child {
+  flex: 1; /* 2/3 of the width */
+}
+
+#about h2 {
+  font-size: 34px;
+  font-weight: 500;
+  margin-top: 0;
+}
+
+#about p {
+  font-size: 20px;
+  font-weight: 100;
+}
+
+/* Quote Heading */
+
+.quote_heading {
+  padding: 40px;
+}
+
+.quote_heading h2 {
+  font-size: 40px;
+}
+
+/* Music  */
+
+#music {
   display: flex;
-  gap: 20px;
-  padding: 30px;
+  justify-content: center;
+}
+
+#music_flex {
+  display: flex;
+  padding: 50px 0px 50px 0px; /* existing padding */
+  gap: 20px; /* margin between image and text */
+  max-width: 1000px;
+}
+
+#music h2 {
+  font-size: 30px;
+}
+
+.music_item.text-item {
+  order: 1;
+}
+.music_item.image-item {
+  order: 2;
+}
+
+/* Experience */
+
+#experience {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-#download div img {
-  margin-top: 0;
-  margin-bottom: 0px;
-}
-
-#download div {
-  flex: 1;
-}
-
-#blog {
-  padding: 30px;
-}
-
-#blog h2 {
-  padding-bottom: 10px;
-}
-
-#blog img {
-  margin: 0;
-}
-
-#blog_flex {
+#experience-flex {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 1000px;
   gap: 20px;
 }
 
-#blog_top {
-  display: flex;
-  gap: 20px;
-}
-
-#blog_top_left {
+.experience-item {
   flex: 1;
 }
 
-#blog_top_right {
-  flex: 1;
+.experience-heading {
+  max-width: 800px;
 }
 
-#blog_bottom {
+/* Links */
+
+#links {
   display: flex;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
 }
+
 
 }
